<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineProvider="paddedBounds"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:outlineProvider="paddedBounds"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">


        <ImageView
            android:id="@+id/background1"
            android:layout_width="1324dp"
            android:layout_height="1719dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/minecrapbg" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="163dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toTopOf="@+id/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/gifanime" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loggin"
            android:layout_width="284dp"
            android:layout_height="345dp"
            android:background="#58FFFFFF"
            android:outlineProvider="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.703">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="115dp"
                android:layout_height="47dp"
                android:fontFamily="@font/caesar_dressing"
                android:shadowColor="#261919"
                android:text="@string/login"
                android:textColorLink="#140E0E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordbox" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordbox"
                android:layout_width="249dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_textview_background"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.46">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="226dp"
                    android:layout_height="43dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/passworddefaultsign"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/email"
                android:layout_width="254dp"
                android:layout_height="63dp"
                android:background="@drawable/rounded_textview_background"
                app:layout_constraintBottom_toTopOf="@+id/passwordbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <EditText

                    android:id="@+id/emailAdd"
                    android:layout_width="218dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:hint="@string/gmail"

                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/registerNow"
                android:layout_width="124dp"
                android:layout_height="41dp"
                android:layout_marginTop="308dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="text"
                android:text="@string/click_to_register"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="210dp"
                android:layout_marginBottom="1dp"
                android:text="EMAIL"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.176"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="207dp"
                android:layout_marginBottom="3dp"
                android:text="PASSWORD"
                app:layout_constraintBottom_toTopOf="@+id/passwordbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcome"
            android:layout_width="282dp"
            android:layout_height="107dp"
            android:background="#41FFEDED"
            app:layout_constraintBottom_toTopOf="@+id/loggin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewregister"
                android:layout_width="280dp"
                android:layout_height="109dp"
                android:fontFamily="@font/caesar_dressing"
                android:outlineProvider="bounds"
                android:padding="?attr/dialogPreferredPadding"
                android:text="WELCOME"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>